Added fonts with icons

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="icons/demo-files/demo.css">     -->
     <title>Admin Panel</title>
 </head>
 <body>
     <div class="wrapper">
         <div class="sidebar">
-            sidebar
+            <svg class="icon icon-home3"><use xlink:href="#icon-home3"></use></svg>
+
         </div>
         <div class="header">
             header
