--- a/index.html
+++ b/index.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <!-- <link rel="stylesheet" href="icons/demo-files/demo.css">     -->
+    <link rel="stylesheet" href="/Fonts/style.css">
     <title>Admin Panel</title>
 </head>
 <body>
     <div class="wrapper">
         <div class="sidebar">
-            <svg class="icon icon-home3"><use xlink:href="#icon-home3"></use></svg>
-
+            <p><span class="icon-menu"></span>Dashboard</p>
+            <p><span class="icon-home3"></span>Home</p>
+            <p><span class="icon-profile"></span>Profile</p>
+            <p><span class="icon-bubbles"></span>Messages</p>
+            <p><span class="icon-clock2"></span>History</p>
+            <p><span class="icon-envelop"></span>Tasks</p>
+            <p><span class="icon-users"></span>Communities</p>
+            <p><span class="icon-cog"></span>Settings</p>
+            <p><span class="icon-shield"></span>Support</p>
+            <p><span class="icon-question"></span>Privacy</p>
         </div>
         <div class="header">
-            header
+            <p><span class="iconSide"></span></p>
         </div>
         <div class="main">
-            main
+            <p><span class="iconSide"></span></p>
         </div>
     </div>
 </body>
