Added grid and sections in html
A little bit of style and rows, columns for sidebar with section in html

--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
     <div class="wrapper">
         <div class="sidebar">
             <p><span class="icon-menu"></span>Dashboard</p>
-            <p><span class="icon-home3"></span>Home</p>
-            <p><span class="icon-profile"></span>Profile</p>
-            <p><span class="icon-bubbles"></span>Messages</p>
-            <p><span class="icon-clock2"></span>History</p>
-            <p><span class="icon-envelop"></span>Tasks</p>
-            <p><span class="icon-users"></span>Communities</p>
-            <p><span class="icon-cog"></span>Settings</p>
-            <p><span class="icon-shield"></span>Support</p>
-            <p><span class="icon-question"></span>Privacy</p>
+            <div id="middle">
+                <p><span class="icon-home3"></span>Home</p>
+                <p><span class="icon-profile"></span>Profile</p>
+                <p><span class="icon-bubbles"></span>Messages</p>
+                <p><span class="icon-clock2"></span>History</p>
+                <p><span class="icon-envelop"></span>Tasks</p>
+                <p><span class="icon-users"></span>Communities</p>
+            </div>
+            <div id="bottom">
+                <p><span class="icon-cog"></span>Settings</p>
+                <p><span class="icon-shield"></span>Support</p>
+                <p><span class="icon-question"></span>Privacy</p>
+            </div>
         </div>
         <div class="header">
             <p><span class="iconSide"></span></p>
