--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="/Fonts/style.css">
+    <link rel="stylesheet" href="fonts_icons/style.css">
     <title>Admin Panel</title>
 </head>
 <body>
