Loaded images and added html markup

--- a/index.html
+++ b/index.html
@@ -26,7 +26,24 @@
             </div>
         </div>
         <div class="header">
-            
+            <div id="searchSection">
+                <span class="icon-search"></span>
+                <input id="search" name="search" type="search">
+            </div>
+            <div id="hiThere_section">
+                <img alt="avatar" src="/images/avatar1.png">
+                <p><span>Hi there,</span>Morgan Oakley (@morgan)</p>
+            </div>
+            <div id="notifications">
+                <span class="icon-bell"></span>
+                <img alt="avatar" src="/images/avatar1.png">
+                <p>Morgan Oakley</p>
+            </div>
+            <div id="community_buttons">
+                <button class="button">New</button>
+                <button class="button">New</button>
+                <button class="button">New</button>
+            </div>
         </div>
         <div class="main">
             
