Positioned and styled buttons

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             </div>
             <div id="community_buttons">
                 <button class="button">New</button>
-                <button class="button">New</button>
-                <button class="button">New</button>
+                <button class="button">Upload</button>
+                <button class="button">Share</button>
             </div>
         </div>
         <div class="main">
