Added articles to html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,43 @@
             </div>
         </div>
         <div class="main">
-            
+            <div id="main_content">
+                <p id="yourProjects">Your Projects</p>
+                <div id="allArticles">
+                    <div class="article">
+                        <h1>Super cool project</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At urna condimentum mattis pellentesque id nibh.</p>
+                    </div>
+                    <div class="article">
+                        <h1>Less cool project</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At urna condimentum mattis pellentesque id nibh. At urna condimentum mattis pellentesque id nibh. At urna condimentum mattis pellentesque id nibh.</p>
+                    </div>
+                    <div class="article">
+                        <h1>Impossible App</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At urna condimentum mattis pellentesque id nibh. At urna condimentum mattis pellentesque id nibh. At urna condimentum mattis pellentesque id nibh. At urna condimentum mattis pellentesque id nibh. At urna condimentum mattis pellentesque id nibh.</p>
+                    </div>
+                    <div class="article">
+                        <h1>Easy Peasy App</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At urna condimentum mattis pellentesque id nibh. At urna condimentum mattis pellentesque id nibh.</p>
+                    </div>
+                    <div class="article">
+                        <h1>Money Maker</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At urna condimentum mattis pellentesque id nibh. At urna condimentum mattis pellentesque id nibh.</p>
+                    </div>
+                    <div class="article">
+                        <h1>Ad Blocker</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At urna condimentum mattis pellentesque id nibh. At urna condimentum mattis pellentesque id nibh.    </p>
+                    </div>
+                </div>
+            </div>
+            <div id="side_content">
+                <div id="announcements">
+                    <p>Announcements</p>
+                </div>
+                <div id="trending">
+                    <p>Treding</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
