Added icons to the articles

--- a/index.html
+++ b/index.html
@@ -52,26 +52,56 @@
                     <div class="article">
                         <h1>Super cool project</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At urna condimentum mattis pellentesque id nibh.</p>
+                        <span class="article_icons">
+                            <span class="icon-bookmarks"></span>
+                            <span class="icon-eye-plus"></span>
+                            <span class="icon-equalizer"></span>
+                        </span>
                     </div>
                     <div class="article">
                         <h1>Less cool project</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At urna condimentum mattis pellentesque id nibh. At urna condimentum mattis pellentesque id nibh. At urna condimentum mattis pellentesque id nibh.</p>
+                        <span class="article_icons">
+                            <span class="icon-bookmarks"></span>
+                            <span class="icon-eye-plus"></span>
+                            <span class="icon-equalizer"></span>
+                        </span>
                     </div>
                     <div class="article">
                         <h1>Impossible App</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At urna condimentum mattis pellentesque id nibh. At urna condimentum mattis pellentesque id nibh. At urna condimentum mattis pellentesque id nibh. At urna condimentum mattis pellentesque id nibh. At urna condimentum mattis pellentesque id nibh.</p>
+                        <span class="article_icons">
+                            <span class="icon-bookmarks"></span>
+                            <span class="icon-eye-plus"></span>
+                            <span class="icon-equalizer"></span>
+                        </span>
                     </div>
                     <div class="article">
                         <h1>Easy Peasy App</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At urna condimentum mattis pellentesque id nibh. At urna condimentum mattis pellentesque id nibh.</p>
+                        <span class="article_icons">
+                            <span class="icon-bookmarks"></span>
+                            <span class="icon-eye-plus"></span>
+                            <span class="icon-equalizer"></span>
+                        </span>
                     </div>
                     <div class="article">
                         <h1>Money Maker</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At urna condimentum mattis pellentesque id nibh. At urna condimentum mattis pellentesque id nibh.</p>
+                        <span class="article_icons">
+                            <span class="icon-bookmarks"></span>
+                            <span class="icon-eye-plus"></span>
+                            <span class="icon-equalizer"></span>
+                        </span>
                     </div>
                     <div class="article">
                         <h1>Ad Blocker</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At urna condimentum mattis pellentesque id nibh. At urna condimentum mattis pellentesque id nibh.    </p>
+                        <span class="article_icons">
+                            <span class="icon-bookmarks"></span>
+                            <span class="icon-eye-plus"></span>
+                            <span class="icon-equalizer"></span>
+                        </span>
                     </div>
                 </div>
             </div>
