side annotation html semantic

--- a/index.html
+++ b/index.html
@@ -108,6 +108,16 @@
             <div id="side_content">
                 <div id="announcements">
                     <p>Announcements</p>
+                    <div id="side_ann">
+                        <h1>Site Maintenance</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis placeat aliquid blanditiis culpa dolore tempore fugit recusandae fugiat ipsum. Ea hic voluptatem quod deleniti nihil provident temporibus odit soluta rem.</p>
+                        <div class="divider"></div>
+                        <h1>Community Share Day</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis placeat aliquid blanditiis culpa dolore tempore fugit recusandae fugiat ipsum. Ea hic voluptatem quod deleniti nihil provident temporibus odit soluta rem.</p>
+                        <div class="divider"></div>
+                        <h1>Updated Privacy Policy</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis placeat aliquid blanditiis culpa dolore tempore fugit recusandae fugiat ipsum. Ea hic voluptatem quod deleniti nihil provident temporibus odit soluta rem.</p>
+                    </div>
                 </div>
                 <div id="trending">
                     <p>Treding</p>
