Positioned and styled side annotation and started trend

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                 </div>
                 <div id="trending">
                     <p>Treding</p>
+                    <div id="side_trend"
                 </div>
             </div>
         </div>
