Added avatars to trending with text

--- a/index.html
+++ b/index.html
@@ -121,7 +121,24 @@
                 </div>
                 <div id="trending">
                     <p>Treding</p>
-                    <div id="side_trend"
+                    <div id="side_trend">
+                        <div>
+                            <img alt="avatar" src="/images/avatar2.png">
+                                <p><span>@tegan</span>World peace builder</p>
+                        </div>
+                        <div>
+                            <img alt="avatar" src="/images/avatar3.png">
+                                <p><span>@hector</span>Super Cool Project</p>
+                        </div>
+                        <div>
+                            <img alt="avatar" src="/images/avatar4.png">
+                                <p><span>@kendall</span>Life Changing App</p>
+                        </div>
+                        <div>
+                            <img alt="avatar" src="/images/avatar5.png">
+                                <p><span>@alex</span>No Traffic Maker</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
